tests/records_unsupported/records_unsupported.exp
Error -------------------------------------------------------------------------------------------------- exported.js:1:8

Records are not enabled. [unsupported-syntax]

             v------------------------------------
   1| export record RNamed { // ERROR: unsupported
   2|   a: number,
   3| }
      ^


Error ------------------------------------------------------------------------------------------------------ test.js:1:1

Records are not enabled. [unsupported-syntax]

   1| record R {} // ERROR: unsupported
      ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:3:11

Records are not enabled. [unsupported-syntax]

   3| const x = R {}; // ERROR: unsupported
                ^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:7:11

Records are not enabled. [unsupported-syntax]

   7| const y = RNamed {a: 1}; // ERROR: unsupported
                ^^^^^^^^^^^^^



Found 4 errors
